--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -522,6 +522,7 @@ footer.sticky-bottom {
         font-weight: bolder;
       }
       .author {
+        font-size: 0.9rem;
         a {
           border-bottom: 1px dashed var(--global-theme-color);
           &:hover {
@@ -532,6 +533,7 @@ footer.sticky-bottom {
         > em {
           border-bottom: 1px solid;
           font-style: normal;
+          font-weight: bolder;
         }
         > span.more-authors {
           color: var(--global-text-color-light);
@@ -543,14 +545,17 @@ footer.sticky-bottom {
           }
         }
       }
+      .periodical {
+        font-size: 0.9rem;
+      }
       .links {
         a.btn {
           color: var(--global-text-color);
           border: 1px solid var(--global-text-color);
-          padding-left: 1rem;
-          padding-right: 1rem;
-          padding-top: 0.25rem;
-          padding-bottom: 0.25rem;
+          padding-left: 0.5rem;
+          padding-right: 0.5rem;
+          padding-top: 0.1rem;
+          padding-bottom: 0.1rem;
           &:hover {
             color: var(--global-theme-color);
             border-color: var(--global-theme-color);
