--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
     <!-- Content -->
     <div class="container mt-5">
       {{ content }}
-      <!-- <a href="javascript:toggleblock('notice')" style="text-align:center;font-size:70%;color:#808080">▶
+      <a href="javascript:toggleblock('notice')" style="text-align:center;font-size:70%;color:#808080">▶
         nnnyt.github.io's clustrmaps 🌎</a>
       <div id="notice" style="display: none; color: rgb(222, 222, 222); font-size: 0.5em;">
         <p>
@@ -36,7 +36,7 @@
               src="//www.clustrmaps.com/map_v2.png?d=pMaqZ_7Y5KyI9SCxGgwQ9eEJp4pg947hBv28B4ommKY&cl=ffffff" /></a>
       </p>
         
-      </div>   -->
+      </div>  
     </div>
 
     <!-- Footer -->
