update intro and pub

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
         <p>
           <a href="https://clustrmaps.com/site/1bwaw"
             title="Visit tracker for nnnyt.github.io"><img
-              src="//www.clustrmaps.com/map_v2.png?d=pMaqZ_7Y5KyI9SCxGgwQ9eEJp4pg947hBv28B4ommKY&cl=ffffff" /></a>
+              src="//clustrmaps.com/map_v2.png?cl=ffffff&w=300&t=tt&d=pMaqZ_7Y5KyI9SCxGgwQ9eEJp4pg947hBv28B4ommKY" /></a>
       </p>
         
       </div>  
